# Image-Processing-hw

./: .gitignore  CMakeLists.txt  README.md  imageprocesser.cpp  imageprocesser.h  mainwindow.cpp  mainwindow.ui  pagebase.cpp  pagebase.h  pagebinaryfunction.cpp  pagebinaryoperation.cpp  pagebinaryoperation.h  pagegrayfunction.cpp  pagegrayfunction.h  pagegrayoperation.cpp  pagegrayoperation.h  pagehistogramandthreshold.cpp  pagehistogramandthreshold.h  pageimagefilter.cpp  pageimagefilter.h  sys.h
Source/inc/: pagebase.h  pagebinaryfunction.h  pagebinaryoperation.h
Source/src/: pagebase.cpp  pagebinaryfunction.cpp  pagebinaryoperation.cpp  pagegrayfunction.cpp  pagegrayoperation.cpp  pageimagefilter.cpp
